# 3d-engine

./: .gitignore  CMakeLists.txt  README.md  buildit  run
include/: CONSTANTS.h  Engine.h  Light.h  Scene.h
include/controller/: Controller.h  Engine.h  FileManager.h  TransformationMatrix.h  TriangleController.h
include/model/: Light.h  Matrix4x4.h  Model.h  Object.h  Observer.h  RGBAColor.h  Scene.h  Triangle.h  UnitVector.h  Vector.h  Vector3d.h
include/view/: Graphics.h  SDLAdapter.h  View.h
src/: main.cpp
src/controller/: Controller.cpp  Engine.cpp  FileManager.cpp  TransformationMatrix.cpp  TriangleController.cpp
src/model/: Light.cpp  Matrix4x4.cpp  Model.cpp  Object.cpp  Observer.cpp  Scene.cpp  Triangle.cpp  UnitVector.cpp  Vector.cpp  Vector3d.cpp
src/view/: View.cpp
src/view/adapters/: SDLAdapter.cpp
src/view/graphics/: RGBAColor.cpp  SDLAdapter.cpp
src/view/graphics/engine/: Engine.cpp  Light.cpp  Object.cpp  Observer.cpp  Scene.cpp
